Add heatcoil test file

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,19 @@ lib_deps =
     HX711
     Rotary
 
-
+[env:heatcoiltest]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+build_src_filter =
+	+<testHC.cpp> -<.git/> -<.svn/>
+lib_deps =
+    OneWire
+    DallasTemperature
+    LiquidCrystal_I2C
+    Wire
+    HX711
+    Rotary
 
 
 
