--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:main]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
 build_src_filter =
 	+<main.cpp> -<.git/> -<.svn/>
