Update millis function

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,29 +12,24 @@
 platform = atmelavr
 board = uno
 framework = arduino
-build_src_filter =
-	+<main.cpp> -<.git/> -<.svn/>
-lib_deps =
-    OneWire
-    DallasTemperature
-    LiquidCrystal_I2C
-    Wire
-    HX711
-    Rotary
+build_src_filter = +<main.cpp> -<.git/> -<.svn/>
+lib_deps = 
+	OneWire
+	DallasTemperature
+	LiquidCrystal_I2C
+	Wire
+	HX711
+	Rotary
 
 [env:heatcoiltest]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_src_filter =
-	+<testHC.cpp> -<.git/> -<.svn/>
-lib_deps =
-    OneWire
-    DallasTemperature
-    LiquidCrystal_I2C
-    Wire
-    HX711
-    Rotary
-
-
-
+build_src_filter = +<testHC.cpp> -<.git/> -<.svn/>
+lib_deps = 
+	OneWire
+	DallasTemperature
+	LiquidCrystal_I2C
+	Wire
+	HX711
+	Rotary
